Changes to Sales and Payments views.

--- a/views/sale_order.xml
+++ b/views/sale_order.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="sale.view_order_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_id']" position='after'>
-                <field name="partner_phone" required="1"/>
+                <field name="partner_phone"/>
                 <field name="partner_address" required="1"/>
             </xpath>
             <xpath expr="//field[@name='payment_term_id']" position='before'>
